ainda falta separar o método de buscar os dados.

--- a/client/view/list.html
+++ b/client/view/list.html
@@ -1,4 +1,4 @@
-<div ng-include="'client/pages/menu.html'"></div>
+<div ng-include="'client/view/menu.html'"></div>
 
 <form>
 	<label>Name:</label>
