change main style

--- a/client/view/main.html
+++ b/client/view/main.html
@@ -13,8 +13,12 @@
 
 <body ng-app="rules" ng-strict-di="">
 
-	<login-buttons></login-buttons>
+	<div class="container">
 
-	<div ui-view=""></div>
+		<login-buttons class="pull-right"></login-buttons>
+
+		<div ui-view=""></div>
+
+	</div>
 
 </body>
